--- a/app/src/main/res/layout/activity_cardfee.xml
+++ b/app/src/main/res/layout/activity_cardfee.xml
@@ -1,9 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="50dp"
+    android:orientation="vertical"
     tools:context=".ui.dashboard.Cardfee">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        >
+
+        <TextView
+            android:id="@+id/Usernametext"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="请选择关联校园卡的银行卡"
+            android:textSize="18sp"
+            />
+
+        <Button
+            android:id="@+id/Usernameedit"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="请选择>"
+            android:textColor="@color/black"
+            android:gravity="right"
+            android:backgroundTint="@color/white"
+            />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/Cardnext"
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="下一步" />
+
+</LinearLayout>
