--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -6,27 +6,46 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="80dp"
         android:orientation="horizontal"
         android:padding="10dp">
-
 
         <ImageView
             android:id="@+id/itemImageView1"
             android:layout_width="60dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/shenghuo" />
 
-        <TextView
-            android:id="@+id/itemTextView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Large Text"
-            android:textSize="20sp"
-            android:layout_gravity="center"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
 
-            />
+            <TextView
+                android:id="@+id/itemTextView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Large Text"
+                android:textSize="20sp"
+                android:layout_gravity="left"
+
+                />
+
+            <TextView
+                android:id="@+id/itemTextView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Large Text"
+                android:textSize="20sp"
+                android:layout_gravity="left"
+
+                />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
