--- a/app/src/main/res/layout/activity_cardinfo.xml
+++ b/app/src/main/res/layout/activity_cardinfo.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
+            android:layout_marginLeft="80dp"
             android:text="118920"
             android:textSize="20sp" />
 
@@ -84,6 +84,7 @@
             />
 
         <TextView
+            android:id="@+id/topText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
