--- a/app/src/main/res/layout/activity_cardfee.xml
+++ b/app/src/main/res/layout/activity_cardfee.xml
@@ -44,6 +44,7 @@
         android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="下一步" />
 
 </LinearLayout>
