--- a/app/src/main/res/layout/activity_cardinfo.xml
+++ b/app/src/main/res/layout/activity_cardinfo.xml
@@ -65,6 +65,7 @@
 
 
         <TextView
+            android:id="@+id/lastfive"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
@@ -104,6 +105,7 @@
             />
 
         <TextView
+            android:id="@+id/leftcurrency"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
