--- a/app/src/main/res/layout/activity_payhistory.xml
+++ b/app/src/main/res/layout/activity_payhistory.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context="com.example.mobilebank.ui.dashboard.CardTopUp">
+    tools:context=".ui.dashboard.CardTopUp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,65 +65,61 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="30dp"
         android:padding="10dp"
+        android:layout_marginTop="20dp"
         >
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="充值金额"
-            />
+            android:orientation="horizontal"
+            >
 
-        <EditText
-            android:id="@+id/moneynum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:hint="元"
-            android:gravity="center"
-            />
+            <TextView
+                android:text="格式"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:text="日期                   时间                   金额"
+                android:layout_marginLeft="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/cardstart"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        android:text="开始充值"
-        />
+        android:orientation="vertical"
+        android:padding="10dp"
+        >
 
-    <TextView
-        android:id="@+id/tips"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        android:text="请输入手机验证码"
-        android:visibility="gone"
-        />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
 
-    <com.example.mobilebank.ui.dashboard.PhoneCode
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/pc_2"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:visibility="gone"
-        />
+            <TextView
+                android:text="第一笔"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-    <Button
-        android:id="@+id/def"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        android:text="确定"
-        android:enabled="false"
-        android:visibility="gone"
-        />
+            <TextView
+                android:text="2020-12-21        13:15                 5.00"
+                android:layout_marginLeft="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
